# Design-Patterns

./: .gitignore  CMakeLists.txt
1. SOLID/: SOLID.md
10. Bridge/: Bridge.md  CMakeLists.txt  main.cpp
11. Observer/: Observer.md  main.cpp
12. Strategy/: Strategy.md  main.cpp
13. Command/: Command.md  main.cpp
14. State/: CMakeLists.txt  State.md  main.cpp
15. Template Method/: CMakeLists.txt  Template Method.md  main.cpp
2. Singleton/: CMakeLists.txt  Singleton.md  main.cpp
3. Factory Method/: CMakeLists.txt  Factory Method.md  main.cpp
4. Abstract Factory/: Abstract Factory.md  CMakeLists.txt  main.cpp
5. Builder/: Builder.md  CMakeLists.txt  main.cpp
6. Adapter/: Adapter.md  CMakeLists.txt  main.cpp
7. Decorator/: CMakeLists.txt  Decorator.md  main.cpp
8. Facade/: CMakeLists.txt  Facade.md  main.cpp
9. Proxy/: CMakeLists.txt  Proxy.md  main.cpp
